--- a/views/index.html
+++ b/views/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html ng-app="gemStore">
+<html ng-app='gemStore'>
   <head>
     <title>JsCart Demo Store</title>
     <link rel="stylesheet" href="stylesheets/style.css">
   </head>
-  <body ng-controller="GemController as gemCtrl">
+  <body ng-controller="StoreController as storeCtrl">
   
-   <aside>
+   <aside ng-controller="CartController as cartCtrl">
      <h4>You have {{cartSize}} items in your cart</h4>
       <table>
        <tr>
@@ -20,7 +20,7 @@
           <td>{{item.price}}</td>
           <td>{{item.quantity}}</td>
           <td>{{(item.quantity * item.price).toFixed(2)}}</td>
-          <td ng-click="gemCtrl.removeItem(item.id)" class="remove" title="remove">X</td>
+          <td ng-click="cartCtrl.removeItem(item.id)" class="remove" title="remove">X</td>
         </tr>
         <tr>
           <td></td>
@@ -33,8 +33,8 @@
    
    <section>
      <h3>What are you looking for today?</h3>
-     <a href="#minerals" ng-click="gemCtrl.getMinerals()">Minerals</a>
-     <a href="#gems" ng-click="gemCtrl.getGems()">Gems</a>
+     <a href="#minerals" ng-click="storeCtrl.getMinerals()">Minerals</a>
+     <a href="#gems" ng-click="storeCtrl.getGems()">Gems</a>
    </section>
    
     <section class="store" ng-show='itemList'>
@@ -44,14 +44,15 @@
       <div class="gem" ng-repeat="item in itemList | filter: storeFilter | orderBy: 'price' ">
         <div class="gemName">{{item.name}}</div>
         <div class="gemColor">{{item.description}}</div>
-        <div class="gemPrice">{{item.price.toFixed(2)}}</div>
-        <input type="number" placeholder="quantity" ng-model="item.quantity" required/>
-        <button ng-click="gemCtrl.addItemToCart(item)">Add to cart</button>
+        <div class="gemPrice">${{item.price.toFixed(2)}}</div>
+        <input type="number" placeholder="quantity" ng-model="item.quantity" min="0"/>
+        <button ng-click="storeCtrl.addItemToCart(item)">Add to cart</button>
       </div>  
     </section>
     
     <script src='javascripts/jscart.js'></script>
     <script src='bower_components/angular/angular.min.js'></script>
     <script src='controllers/gems.js'></script>
+    <script src='controllers/cart.js'></script>
   </body>
 </html>
