--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,22 +1,64 @@
 * {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+   -webkit-box-sizing: border-box;
+   -moz-box-sizing: border-box;
+   box-sizing: border-box;
+   margin: 0;
+   padding: 0;
 }
-aside,
-section.store {
-  float: left;
+
+.ng-link{
+  cursor:pointer;
 }
-aside {
-  width: auto;
-  height: auto;
-  border: 1px solid black;
-  display: table;
-  padding: 0px 10px 10px 10px;
+
+nav{
+  width: 100%;
+  background-color:#893704;
 }
+
 aside ul {
   list-style-type: none;
   text-align: left;
+}
+
+
+aside.modal{
+  position:fixed;
+  background-color:rgba(46, 44, 44, 0.51);
+  width:100%;
+  height:100%;
+  z-index: 100;
+}
+
+aside .cart{
+  width: 500px;
+  background-color:white;
+  margin:auto;
+  padding: 20px;
+  position:relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+aside .cart table{
+  border-collapse: collapse;
+}
+
+aside .cart table tr:nth-child(odd){
+  background-color:#b4aeae;
+}
+
+aside .cart table tr:last-child{
+  background-color:white;
+  border-top: 1px solid black;
+}
+
+aside .cart table tr:first-child{
+  background-color:white;
+  border-bottom: 1px solid black;
+}
+
+aside .cart table tr th, aside .cart table tr td {
+  padding: 10px;
 }
 .gems {
   margin-left: 100px;
