Added foundation to the front-end, a Gruntfile, and changed file structure

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,5 +1,7 @@
-<section>
-    <h3>What are you looking for today?</h3>
-    <a href="#minerals">Minerals</a>
-    <a href="#gems">Gems</a>
+<section class="row home">
+   <div class=" large-12  columns">
+     <h3>What are you looking for today?</h3>
+     <a href="#minerals" class="button small-4 large-4">Minerals</a>
+     <a href="#gems" class="button small-4 large-4">Gems</a>
+   </div>
 </section>
