--- a/public/partials/items.html
+++ b/public/partials/items.html
@@ -1,12 +1,22 @@
 <section class="store">
-    <h3>Search</h3>
-    <input type="text" ng-model="itemFilter" />
-    <br/>
-    <div class="gem" ng-repeat="item in itemList | orderBy: 'price'| filter: itemFilter ">
-        <div class="gemName">{{item.name}}</div>
-        <div class="gemColor">{{item.description}}</div>
-        <div class="gemPrice">${{item.price.toFixed(2)}}</div>
-        <input type="number" placeholder="quantity" ng-model="item.quantity" min="0" />
-         <button ng-click="cartCtrl.addItemToCart(item)">Add to Cart</button>
+    <div class="row">   
+       <div class="large-6 medium-4 columns">
+        <h3 >Search</h3>
+        <input type="text" ng-model="itemFilter" />
+      </div>
     </div>
+
+   <div class="row">    
+      <div class="item large-4 medium-4 columns" ng-repeat="item in itemList | orderBy: 'price'| filter: itemFilter ">
+         <ul class="pricing-table ">
+           <li class="title">{{item.name}}</li>
+           <li class="bullet-item"><img src="http://placehold.it/250x150"></li>
+           <li class="description">{{item.description}}</li>
+           <li class="price">${{item.price.toFixed(2)}}</li>
+           <li class="bullet-item"><input type="number" placeholder="quantity" ng-model="item.quantity" min="0" /></li>
+           <li class="cta-button"><button ng-click="cartCtrl.addItemToCart(item)">Add to Cart</button></li>
+         </ul>
+      </div>
+   </div>
+   
 </section>
