added a psuedo-checkout for demostration purposes

--- a/public/partials/items.html
+++ b/public/partials/items.html
@@ -1,7 +1,7 @@
 <section class="store">
     <div class="row">   
        <div class="large-6 medium-4 columns">
-        <h3 >Search</h3>
+        <h3>Filter {{category}}</h3>
         <input type="text" ng-model="itemFilter" />
       </div>
     </div>
