polishing controllers and added the ability to delete all items in the cart. Added seed data for the database

--- a/views/index.html
+++ b/views/index.html
@@ -27,24 +27,24 @@
   <div id="checkoutModal" class="reveal-modal"  data-reveal>
     <h2>Checkout</h2>
     <p> Your cart has {{cartSize}} items for a total of {{cartTotal | currency}}</p>
-    <p>This is a demo, no need to post real data!</p>
+    <p>This is a demo, we have provided data for you!</p>
     
     <form class="row" >
      
       <label class="small-12">Name</label>
-      <input class="small-12" type="text" ng-model="formData.name">
+      <input class="small-12" type="text" ng-model="formData.name" >
       
       <label class="small-12">Street Address</label>
-      <input class="small-12" type="text" ng-model="formData.street">
+      <input class="small-12" type="text" ng-model="formData.street" >
       
       <label class="small-4">Zip Code</label>
-      <input class="small-4"type="text" ng-model="formData.zip">
+      <input class="small-4"type="text" ng-model="formData.zip" >
       
       <label>City</label>
-      <input type="text" ng-model="formData.city">
+      <input type="text" ng-model="formData.city" >
       
       <label> Credit Card </label>
-      <input type="text" ng-model="formData.payment">
+      <input type="text" ng-model="formData.payment" >
       
     </form>
     
